# Diplom

./: .gitignore  README.md  pyproject.toml
binding_core/: README.md  requirements.txt
binding_core/configs/: finetune_lactamase_curated.yaml  finetune_vae_mbl_neural_nzbg_brsa_0.yaml  finetune_vae_mbl_neural_nzbg_brsa_1.yaml  finetune_vae_mbl_neural_nzbg_brsa_2.yaml  predictor_mlp.yaml  predictor_mlp_curated.yaml
binding_core/scripts/: audit_lactamase.py  finetune_lactamase.py  fusion_inference.py  moses_vae_sample.py  precompute_embeddings.py  preprocess_data.py  run_neural_nzbg_brsa_1_2_experiments.sh  run_neural_nzbg_brsa_experiments.sh  train_predictor_mlp.py  vae_finetune_mbl_neural_nzbg_brsascore.py
binding_core/src/architectures/: fusion.py
binding_core/src/utils/: dataset.py
binding_core/temp_upload/: predictor_fusion.yaml
binding_core/temp_upload/scripts/: train_predictor_fusion.py
binding_core/temp_upload/utils/: collate.py  dataset.py  tokenizers.py
docking/: README.md
docking/dual_receptors_7up3_active_site/: dual_pseudocenters.csv  ndm1_ensemble_c01_dual.pdbqt  ndm1_ensemble_c02_dual.pdbqt  ndm1_ensemble_c03_dual.pdbqt  ndm1_ensemble_c04_dual.pdbqt
docking/receptors/: ndm1_ensemble_c01.pdbqt  ndm1_ensemble_c02.pdbqt  ndm1_ensemble_c03.pdbqt  ndm1_ensemble_c04.pdbqt
docking/scripts/: derive_dual_pseudocenters.py  run_ensemble_ad4zn.py
